Fixed spacing after images

--- a/css/styles.css
+++ b/css/styles.css
@@ -747,6 +747,7 @@ label,
 
 .header-img-container {
     margin-top: 88px;
+    padding-bottom: 88px;
 }
 
 .header-img-left {
